dbeaver/pro#8158 Add/fix tests